--- a/src/LoginUi/LoginUi.css
+++ b/src/LoginUi/LoginUi.css
@@ -5,8 +5,9 @@
     padding-top: 5%;
     padding-left: 50%;
     padding-bottom: 5%;
-    background-image: url("C:\Users\sinch\suvidha\src\image\login_bgnew.png");
-    background-color: #e1e3eb;
+    /* background-image: url("C:\Users\sinch\suvidha\src\image\login_bgnew.png");
+    background-color: #e1e3eb; */
+    background-image: url("login_bgnew.png");
     width: auto;
     height: auto;
 
