--- a/src/LoginUi/LoginUi.css
+++ b/src/LoginUi/LoginUi.css
@@ -1,26 +1,52 @@
+.img {
+  /* background-image: url("login_bgnew.png"); */
+    background-color: rgb(30, 67, 73);
+    height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* padding-inline-start: 0%; */
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
+}
+.suvi{
+    color: #fff;
+    font-size: xx-large;
+    padding-left: 5%;
+    font-weight: 800;
+    font-family: 'Oswald', sans-serif;
+
+}
+
 .main {
     text-align: center;
     justify-content: center;
     display: flex; 
-    padding-top: 5%;
-    padding-left: 50%;
+    
+         /* padding-left: 50%;
     padding-bottom: 5%;
+    padding-inline-start: 50%; */
     /* background-image: url("C:\Users\sinch\suvidha\src\image\login_bgnew.png");
     background-color: #e1e3eb; */
-    background-image: url("login_bgnew.png");
-    width: auto;
-    height: auto;
-
+    /* height: 50%; */
+    width: 50%;
+    padding-inline-start: 25%;
+    /* padding-top: 10%;
+    padding-left: 10%; */
   }
 
   
   .sub-main {
     display: flex;
     justify-content: center;
-    height: 550px;
+    height: 450px;
     width: 60%;
     /* box-shadow: 11px 12px 13px 12px rgb(207, 207, 207); */
-    padding-top: 30px;
+    padding-top: 20px;
+    padding-bottom: 25px;
     border-radius: 30px; 
     background-color: rgb(13, 63, 69);
     opacity: 0.7;
@@ -31,26 +57,6 @@
     color: #ffffff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
-
-  /* .imgs {
-      padding-top: 20px;
-      justify-content: center;
-      display: flex;
-    } */
-  /* .container-image {
-    background-color: rgb(223, 221, 221); 
-    border-radius: 150px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 115px;
-    width: 115px;
-  } */
-  /* .profile {
-    height: 100px;
-    width: 100px;
-    border-radius: 130px;
-  }  */
 
   input{
       width: 300px;
