--- a/src/LoginUi/LoginUi.css
+++ b/src/LoginUi/LoginUi.css
@@ -1,6 +1,6 @@
 .img {
   /* background-image: url("login_bgnew.png"); */
-    background-color: rgb(61, 106, 113);
+    background: linear-gradient(0deg,#062526, #167D7F);;
     height: 100vh;
     width: 100%;
     background-position: center;
@@ -49,7 +49,7 @@
     width: 50%;
     padding-inline-start: 25%;
     padding-top: 2%;
-    
+    opacity: 0.6;
     
     /* padding-top: 10%;
     padding-left: 10%; */
@@ -67,7 +67,7 @@
     padding: 20px;
     border-radius: 30px; 
     background-color: rgb(13, 63, 69);
-    opacity: 0.7;
+    /* opacity: 0.7; */
   }
 
   .title{
@@ -131,7 +131,7 @@
    /* Media queries for responsive design */
 @media only screen and (max-width: 768px) {
   .suvi {
-    font-size: large;
+    font-size: x-large;
   }
   
   .main {
