--- a/src/LoginUi/LoginUi.css
+++ b/src/LoginUi/LoginUi.css
@@ -83,10 +83,16 @@
       /* box-shadow: inset 0px 0px 25px 0px #888; */
       border: none;
       outline: none;
-      background-color: #c7dade;
+      background-color: #6fa3ae;
       width: 70%;
-      opacity: 55%;
+      opacity: 100%;
   }
+
+  input::placeholder {
+    font-weight: bold;
+    opacity: 1;
+    color: #062526;
+}
 
   .email{
       height: 25px;
@@ -96,10 +102,18 @@
       opacity: 100%;
       
   }
-
+  .email-pic{
+    height: 25px;
+      width: 25px;
+      position: absolute;
+      padding: 14px 0 0 25px;
+      opacity: 100%;
+  }
   .name{
       padding-left: 70px;
       font-size: 20px;
+      color: black;
+      font-weight: 100;
   }
   .second-input{
       padding-top: 20px;
