--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -11,6 +11,7 @@
 .suvi{
     color: #fff;
     font-size: xx-large;
+    padding: 2%;
     padding-left: 5%;
     font-weight: 800;
     font-family: 'Oswald', sans-serif;
